--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
 </head>
 <body>
+    
 <p>cjm38 - Christian Monterrosa</p>
 <p>IS 117002 - Introduction to Web Development</p>
+    
 </body>
 </html>
